popups container z-index fix

--- a/app/assets/stylesheets/market/lk/common.styl
+++ b/app/assets/stylesheets/market/lk/common.styl
@@ -363,6 +363,7 @@ lk_sprite = url('/assets/images/market-lk-sprite.png') no-repeat left top
     position: fixed
     top: 0
     left: 0
+    z-index: 40
     width: 100%
     height: 100%
     overflow-y: scroll
